tests/snapshots/cli_snapshots__add_help_stdout.snap
---
source: tests/cli_snapshots.rs
expression: stdout
---
Add words to the project dictionary

Usage: matchum add [OPTIONS] [WORDS]...

Arguments:
  [WORDS]...  Words to add

Options:
      --forbidden        Add as forbidden words instead
  -c, --config <CONFIG>  Config file path
  -h, --help             Print help
