tests/snapshots/cli_snapshots__cspell_help_stdout.snap
---
source: tests/cli_snapshots.rs
expression: stdout
---
cspell-compatible command interface

Usage: matchum cspell <COMMAND>

Commands:
  lint          Check spelling
  check         Spell check file(s) and display the result. The full file is displayed in color
  trace         Trace words -- Search for words in the configuration and dictionaries
  suggestions   Spelling Suggestions for words
  init          Initialize a CSpell configuration file
  link          Link dictionaries and other settings to the cspell global config
  dictionaries  List dictionaries
  help          Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
