tests/snapshots/cli_snapshots__dict_help_stdout.snap
---
source: tests/cli_snapshots.rs
expression: stdout
---
Manage dictionary packages

Usage: matchum dict <COMMAND>

Commands:
  fetch  Fetch dictionary packages from npm registry
  list   List installed dictionary packages
  help   Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help
