tests/snapshots/cli_snapshots__lint_with_issues_stdout.snap
---
source: tests/cli_snapshots.rs
expression: normalize(&stdout)
---
tests/fixtures/sample.txt:3:1 - Unknown word (misspeled) fix: (misspelled)
