tests/snapshots/cli_snapshots__nonexistent_config_stderr.snap
---
source: tests/cli_snapshots.rs
assertion_line: 172
expression: normalize_stderr(&stderr)
---
Error: failed to load config: IO error: No such file or directory (os error 2): No such file or directory (os error 2)
