tests/snapshots/cli_snapshots__nonexistent_file_stderr.snap
---
source: tests/cli_snapshots.rs
assertion_line: 158
expression: normalize_stderr(&stderr)
---
No files found to check.
