tests/snapshots/cli_snapshots__text_stdout.snap
---
source: tests/cli_snapshots.rs
assertion_line: 74
expression: normalize(&stdout)
---
tests/fixtures/sample.txt:3:1 - Unknown word (misspeled)
